# scraper-experiment

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  db.sqlite3-shm  db.sqlite3-wal  demo_anti_detection.py  docker-compose.yaml  manage.py  pyproject.toml  test_anti_detection.py  test_rotation.py
.github/: copilot-instructions.md
scraper/: main.py
scraper/configs/: constants.py  models.py  openapidocs.py
scraper/core/: config.py  container.py  exceptions.py  middleware.py
scraper/libs/: generate_reports.py  get_news.py  logger.py  proxy_utils.py  rotation_utils.py  utils.py
scraper/routes/: get_analysis.py  get_data.py  get_news.py  health.py  lyrics.py  routers.py  status.py
scraper/schemas/: __init__.py
scraper/services/: analysis_service.py  data_service.py  interfaces.py  news_service.py
tests/: test_data_service.py  test_utils.py
