[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Q <phlacx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blacksheep = "^2.0.7"
uvicorn = "^0.34.0"
gnews = "^0.3.9"
googlenewsdecoder = "^0.1.6"
google-generativeai = "^0.8.3"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.23.0"}
newspaper3k = "^0.2.8"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
python-daemon = "^3.1.2"

[tool.poetry.scripts]
server = "scraper.main:server"
daemon = "scraper.main:run_as_daemon"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
